# YourLocalJared

./: .env.example  .gitignore  CLAUDE.md  DESIGN_HANDOFF.md  LICENSE  README.md  ROADMAP.md  bootstrap.ps1  bootstrap.sh  install.bat  install.py  install.sh  pyproject.toml  start.py
.github/workflows/: ci.yml  claude.yml
tests/: test_chat_endpoint.py  test_config_endpoint.py  test_filetypes_parity.py  test_folders_endpoint.py  test_ingest.py  test_ingest_resilience.py  test_install_args.py  test_llm.py  test_ollama_status.py  test_parse_xlsx.py  test_probe.py  test_rag.py  test_resolve_ollama.py  test_reveal.py  test_scanner.py  test_server_helpers.py  test_setup_endpoints.py
ylj/: config.py  documents.py  embeddings.py  ingest.py  llm.py  probe.py  rag.py  reveal.py  scanner.py  server.py  vectorstore.py
ylj/static/: chat.html  onboarding.html
ylj/static/src/: app.jsx  chat-app.jsx  chat-composer.jsx  chat-data.jsx  chat-messages.jsx  chat-sidebar.jsx  chat-sources.jsx  data.jsx  logo.jsx  prefs.jsx  primitives.jsx  reveal.jsx  screens-filetypes.jsx  screens-folders.jsx  screens-handoff.jsx  screens-hardware.jsx  screens-ingest.jsx  screens-install.jsx  screens-models.jsx  screens-test.jsx  screens-welcome.jsx  shell.jsx  tweaks.jsx
